...
    <string name="media_action_copied_image">Image copied</string>
    <string name="media_action_copied_video">Video copied</string>
    <string name="media_action_copy_failed">Could not copy</string>
    <string name="media_action_show_in_chat">Show in chat</string>
    <string name="media_action_open_externally">Open externally</string>
    <string name="media_action_delete">Delete</string>
    <string name="media_more_actions">More actions</string>
    <string name="media_menu_speed">Playback speed %1$s</string>
    <string name="media_menu_loop">Loop this video</string>
    <string name="media_menu_pip">Picture in picture</string>
    <string name="media_menu_listen_background">Listen in background</string>
    <string name="media_thumb_video">Video thumbnail</string>
    <string name="media_badge_video">VIDEO</string>
    <string name="media_badge_video_lower">video</string>
    <string name="media_badge_photo">PHOTO</string>
    <string name="media_badge_photo_lower">photo</string>
    <string name="media_caption_empty">No caption</string>
    <string name="media_listen_background_active">Playing in the background</string>
    <string name="media_mini_player_collapse">Close player</string>
    <string name="media_mini_player_expand">Open media</string>
    <string name="media_mini_player_next">Next video</string>
    <string name="media_mini_player_pause">Pause</string>
    <string name="media_mini_player_play">Play</string>
    <string name="media_pip_enter">Picture in picture</string>
    <string name="media_playback_channel">Media playback</string>
    <string name="media_viewer_label">Media viewer</string>
    <string name="media_mini_player_now_playing">Now playing, %1$s, %2$s of %3$s, album item %4$d of %5$d</string>
    <string name="media_action_info">Info</string>
    <string name="media_info_name">File name</string>
    <string name="media_info_size">Size</string>
    <string name="media_info_dimensions">Dimensions</string>
    <string name="media_info_dimensions_value">%1$d × %2$d</string>
    <string name="media_info_duration">Duration</string>
    <string name="media_info_date">Date</string>
    <string name="media_info_hdr">HDR</string>
    <string name="media_info_gainmap">HDR gain map</string>
    <string name="media_info_yes">Yes</string>
    <string name="media_info_no">No</string>
    <string name="media_info_unknown">Unknown</string>
    <string name="media_action_save_as">Save as…</string>
    <string name="media_copy_hdr_warning">Image copied. Some apps may not support HDR</string>
</resources>

